--- a/.github/workflows/vax.yml
+++ b/.github/workflows/vax.yml
@@ -2,7 +2,7 @@ name: vax-github-actions
 
 on:
   schedule:
-    - cron: "0 8,13,17,19,21,23 * * *"
+    - cron: "0 */3 * * *"
 
 jobs:
   update-vax-data:
